# PACT

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.agent  Dockerfile.web  HACKATHON_PITCH.md  PROGRESS.md  README.md  SECURITY.md  cloudbuild.agent.yaml  package-lock.json  package.json  tsconfig.base.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
contracts/: README.md  package.json
contracts/scripts/: compile.js  deploy_testnet.js  (+1 more)
deploy/: .env.demo.example  .env.production.example  Dockerfile.api  Dockerfile.web  README.md  docker-compose.demo.yml  docker-compose.production.yml  nginx.conf  web-entrypoint.sh
docs/: AGENT_API_ONBOARDING.md  AGENT_PROTOCOL.md  AGENT_RUNTIME.md  ARCHITECTURE.md  ARC_TESTNET_DEPLOYMENT.md  ARENA_JUDGE_RUBRIC.md  HACKATHON_PITCH.md  HACKATHON_SUBMISSION.md  JUDGE_SECURITY.md  PACT_FIX_RUNBOOK_STATUS.md  PRESENTATION_FACT_CHECK.md  PRODUCTION_READINESS_AUDIT.md  PROJECT_IMPLEMENTATION_AND_RISK_REGISTER.md  README.md  SITE_GUIDE.md  TASK_RECIPES_AND_ARBITRATION.md  TRUST_MODEL.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
scripts/: check-locales.mjs
shared/: package.json
training/: README.md  pyproject.toml
training/arena-judge/: README.md  reviewed.example.jsonl
training/configs/: qwen35-2b-qlora.toml
training/evals/: pact_policy_eval.jsonl
training/examples/: sample_traces.json
training/src/pact_training/: __init__.py  cli.py  common.py  evaluate.py  export.py  factory.py  prepare.py  train.py
(+83 files in other folders)
